Integracion CAS - Perdiendo la cabeza en base64